não aguento mais

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <script src="./whatsapp.js" defer></script>
     <title>WhatsApp API</title>
 </head>
 <body>
     <header></header>
     <main>
-        <section class="container"></section>
+        <section class="container">
+            <section class="entrar">
+                <!-- <h2>DIGITE O SEU NÚMERO DE TELEFONE</h2> -->
+                <input type="text" class="entrando" placeholder="DIGITE O SEU TELEFONE">
+            </section>
+        </section>
     </main>
 </body>
 </html>
