--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="./style.css">
     <script src="./whatsapp.js" defer></script>
 </head>
-<body>
-    <header><h1>WhatsApp</h1></header>
+<body class="body-inicio">
+    <div class="conteudo">
+        <header class="header-h1"><h1>WhatsApp</h1></header>
 
-    <section class="login-container">
-        <h2>DIGITE SEU NÚMERO DE TELEFONE, PARA TER ACESSO AS SUAS MENSAGENS!</h2>
-        <input type="text" class="entrando" placeholder="Digite seu número e pressione Enter">
-    </section>
-
+        <section class="login-container">
+            <h2>DIGITE SEU NÚMERO DE TELEFONE, PARA TER ACESSO AS SUAS MENSAGENS!</h2>
+            <input type="text" class="entrando" placeholder="Digite seu número e pressione Enter">
+        </section>
+    </div>
+    
     <main>
         
     </main>
